New: added the endpoint updater
